# sift

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.release.yml  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml  labeler.yml  release.yml
alembic/: env.py  script.py.mako
config/: plugins.yaml
dev-data/: README.md  public-sample.opml
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
docs/: architecture.md  backlog-history.md  backlog.md  deployment.md  development.md  getting-started.md  install.md  observability-runbook.md  release-cycle.md  session-notes.md
frontend/: .env.example  .gitignore  .prettierignore  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: setup-codex-env.sh  setup-local-vscode.ps1
tests/: test_api_only_surface.py  test_article_fulltext_api.py  test_article_fulltext_service.py  test_article_service.py  test_article_state_api.py  test_auth_api.py  test_auth_service.py  test_dashboard_api.py  test_dev_seed_service.py  test_feed_health_api.py  test_feed_health_service.py  test_feed_service.py  test_filter_service.py  test_folder_service.py  test_health.py  test_ingestion_service.py  test_metrics_server.py  test_navigation_service.py  test_observability_api.py  test_observability_logging.py  test_opml_service.py  test_plugin_registry.py  test_plugin_runtime_manager.py  test_plugins_api.py  test_query_language.py  test_rule_service.py  test_scheduler.py  test_stream_backfill_api.py  (+4 more)
(+202 files in other folders)
